--- a/nlapi/PII/pii_detection_it_nlapi.ipynb
+++ b/nlapi/PII/pii_detection_it_nlapi.ipynb
@@ -169,17 +169,24 @@
     "for doc in documentsIt:\n",
     "    mapInstances = {}\n",
     "    partianElements = []\n",
+    "    fieldName=\"\"\n",
     "    for extraction in doc['res'].extractions:\n",
+    "        \n",
     "        if extraction.template in mapInstances:\n",
     "            mapInstances[extraction.template] += 1\n",
     "        else:\n",
     "            mapInstances[extraction.template] = 1\n",
+    "        dateCount=0;\n",
     "        for field in extraction.fields:\n",
+    "            fieldName = field.name\n",
+    "            if field.name == \"dateTime\":\n",
+    "                dateCount+=1\n",
+    "                fieldName+= \" #\"+str(dateCount)\n",
     "            row = {\n",
     "                \"file\" : doc['file'],\n",
     "                \"template\": extraction.template,\n",
     "                \"instance\" : '#' + str(mapInstances[extraction.template]),\n",
-    "                'field':field.name,\n",
+    "                'field':fieldName,\n",
     "                'value':field.value\n",
     "            }\n",
     "            partianElements.append(row)\n",
