--- a/nlapi/play_with_expertai_nlapi_v2.ipynb
+++ b/nlapi/play_with_expertai_nlapi_v2.ipynb
@@ -44,22 +44,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install -U expertai-nlapi==2.1.3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "That's it, you're ready to go."
    ]
   },
@@ -310,7 +294,56 @@
    "source": [
     "## Classification\n",
     "Let's see how to classify documents according the **IPTC Media Topics Taxonomy**; we're going to use a text that has more textual information and then we'll use the matplot lib to show the categorization result\n",
-    "* [taxonomy definition](http://cv.iptc.org/newscodes/mediatopic)"
+    "* [taxonomy definition](http://cv.iptc.org/newscodes/mediatopic)\n",
+    "\n",
+    "Results will be displayed using Matplotlib, so first install it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in c:\\users\\avarone\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (3.3.4)\n",
+      "Collecting matplotlib\n",
+      "  Downloading matplotlib-3.4.2-cp38-cp38-win_amd64.whl (7.1 MB)\n",
+      "Requirement already satisfied: numpy>=1.16 in c:\\users\\avarone\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib) (1.20.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\avarone\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\avarone\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\avarone\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\avarone\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib) (2.8.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\avarone\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib) (7.0.0)\n",
+      "Requirement already satisfied: six in c:\\users\\avarone\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
+      "Installing collected packages: matplotlib\n",
+      "  Attempting uninstall: matplotlib\n",
+      "    Found existing installation: matplotlib 3.3.4\n",
+      "    Uninstalling matplotlib-3.3.4:\n",
+      "      Successfully uninstalled matplotlib-3.3.4\n",
+      "Successfully installed matplotlib-3.4.2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.0.1; however, version 21.1.2 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\avarone\\appdata\\local\\programs\\python\\python38\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -U matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, set the text you want to classifiy:"
    ]
   },
   {
@@ -442,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
